--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   
   <!-- Favicon -->
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
